fix: remove js scrollbar in body

--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -1,5 +1,4 @@
 html {
-    overflow: hidden;
 }
 
 body {
